# Practice-Interview

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  gemm.cu  merge_sort.cpp  qsort.cpp  readme.md  reduce_sum.cu  transpose.cu
algorithm/merge_sort/: CMakeLists.txt
algorithm/qsort/: qsort.cpp
cuda_kernel/: CMakeLists.txt
cuda_kernel/gemm/: CMakeLists.txt  gemm.cu
cuda_kernel/reduce_sum/: CMakeLists.txt
cuda_kernel/transpose/: CMakeLists.txt
leetcode/: CMakeLists.txt
